# inventory_item_image_annotator

./: CMakeLists.txt  package.xml
launch/: inventory_item_image_annotator.launch
src/include/: inventory_item_image_annotator.h
src/source/: inventory_item_image_annotator.cpp  inventory_item_image_annotator_main.cpp
