<?xml version="1.0"?>
<package>
  <name>inventory_item_image_annotator</name>
  <version>0.0.0</version>
  <description>The inventory_item_image_annotator package</description>

  <maintainer email="rafa@todo.todo">rafa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_process</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>aerostack_msgs</build_depend>
  <build_depend>zbar</build_depend>
  <build_depend>drone_process</build_depend>
  <build_depend>belief_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robot_process</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>aerostack_msgs</run_depend>
  <run_depend>zbar</run_depend>pend>
  <run_depend>drone_process</run_depend>
  <run_depend>belief_manager_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->

    <!-- Other tools can request additional information be placed here -->

</package>
